--- a/.eslintrc
+++ b/.eslintrc
@@ -34,6 +34,7 @@
         "prefer-promise-reject-errors": "off",
         "import/prefer-default-export": "off",
         "react/jsx-no-bind": "off",
+        "react/jsx-filename-extension": "off",
         "react/forbid-prop-types": ["error", { "forbid": ["any"] }],
         "react/jsx-indent": ["error", 4],
         "react/jsx-indent-props": [2, 4],
